# libnbtpp2

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Doxyfile  LICENSE  LICENSE.md  README.md
doc/: footer.html  header.html  mainpage.md  setup_cmake.md
include/nbtpp2/: all_tags.hpp  converters.hpp  endianness.hpp  io.hpp  nbt_file.hpp  nbtpp2_def.hpp  number_array_tag.hpp  number_tag.hpp  read_tag.hpp  tag.hpp  tag_type.hpp  util.hpp
include/nbtpp2/tags/: number_array_tag.hpp  number_tag.hpp  tag_byte.hpp  tag_byte_array.hpp  tag_compound.hpp  tag_double.hpp  tag_float.hpp  tag_int.hpp  tag_int_array.hpp  tag_list.hpp  tag_long.hpp  tag_long_array.hpp  tag_short.hpp  tag_string.hpp
src/: catch.hpp  endianness.cpp  io.cpp  nbt_file.cpp  read_tag.cpp  tests.cpp  util.cpp
src/tags/: tag.cpp  tag_byte.cpp  tag_byte_array.cpp  tag_compound.cpp  tag_double.cpp  tag_float.cpp  tag_int.cpp  tag_int_array.cpp  tag_list.cpp  tag_long.cpp  tag_long_array.cpp  tag_short.cpp  tag_string.cpp  tag_type.cpp
